--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,9 @@ artifacts_dir: artifacts
 
 data_ingestion:
     ingestion_dir: artifacts/data_ingestion
-    data_file: artifacts/data_ingestion/data.csv
+    books_data_file: artifacts/data_ingestion/books.csv
+    ratings_data_file: artifacts/data_ingestion/ratings.csv
+    users_data_file: artifacts/data_ingestion/users.csv
     train_data_file: artifacts/data_ingestion/train.csv
     test_data_file: artifacts/data_ingestion/test.csv  
 
